--- a/Recurrent_Neural_Network_example.ipynb
+++ b/Recurrent_Neural_Network_example.ipynb
@@ -18,16 +18,13 @@
     "    - Example: $x^{\\langle t \\rangle}$ is the input x at the $t^{th}$ time-step. $x^{(i)\\langle t \\rangle}$ is the input at the $t^{th}$ timestep of example $i$.\n",
     "    \n",
     "- Lowerscript $i$ denotes the $i^{th}$ entry of a vector.\n",
-    "    - Example: $a^{[l]}_i$ denotes the $i^{th}$ entry of the activations in layer $l$.\n",
-    "\n",
-    "We assume that you are already familiar with `numpy` and/or have completed the previous courses of the specialization. Let's get started!"
+    "    - Example: $a^{[l]}_i$ denotes the $i^{th}$ entry of the activations in layer $l$.\n".
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's first import all the packages that you will need during this assignment."
    ]
   },
   {
@@ -46,10 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 - Forward propagation for the basic Recurrent Neural Network\n",
-    "\n",
-    "Later this week, you will generate music using an RNN. The basic RNN that you will implement has the structure below. In this example, $T_x = T_y$. "
-   ]
+    "## 1 - Forward propagation for the basic Recurrent Neural Network\n"   ]
   },
   {
    "cell_type": "markdown",
