--- a/Recurrent_Neural_Network_example.ipynb
+++ b/Recurrent_Neural_Network_example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's first import all the packages that you will need during this assignment."
+    "Let's first import all the packages."
    ]
   },
   {
